--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <li>Below are some in browser compilers, click files,then the play button in the top right of each to view some of my projects at work!</li><br>
     <li>All of my projects can be found on <a href = "https://github.com/BenGfoyle"> my github.</a> some of my favoirtes are below</li><br>
     <li><a href = "https://github.com/BenGfoyle/Projectile-Motion">Projectile-Motion</a> is a python script to plot a 2D projectile in flight.</li><br>
-    <iframe frameborder="0" width="100%" height="500px" src="https://repl.it/repls/FatalGraveTelecommunications?lite=true"></iframe>
+    <iframe frameborder="0" width="100%" height="500px" src="https://repl.it/@bengfoyle/Projectile-Motion?lite=true"></iframe>
     <li><a href = "https://github.com/BenGfoyle/PythonEmail">PythonEmail</a> is a script designed to send emails from a gmail account to any email address.<br>
 
 </div>
