New python compiler

--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
     <li>Below are some in browser compilers, click files,then the play button in the top right of each to view some of my projects at work!</li><br>
     <li>All of my projects can be found on <a href = "https://github.com/BenGfoyle"> my github.</a> some of my favoirtes are below</li><br>
     <li><a href = "https://github.com/BenGfoyle/Projectile-Motion">Projectile-Motion</a> is a python script to plot a 2D projectile in flight.</li><br>
-    <iframe frameborder="0" width="100%" height="500px" src="https://repl.it/@bengfoyle/Projectile-Motion?lite=true"></iframe>
-    <li><a href = "https://github.com/BenGfoyle/PythonEmail">PythonEmail</a> is a script designed to send emails from a gmail account to any email address.<br>
-
+    <iframe frameborder="0" width="100%" height="600px" src="https://repl.it/@bengfoyle/Projectile-Motion?lite=true"></iframe>
+    <li><a href = "https://github.com/BenGfoyle/PythonEmail">EP305</a> is a collection of scripts designed as part of the module "Programming for Physicists"</li><br>
+    <iframe frameborder="0" width="100%" height="600px" src="https://repl.it/@bengfoyle/EP305?lite=true"></iframe>
 </div>
 
 <div id="cv" class="tabcontent">
   <object data="BenGuilfoyleResume.pdf" type="application/pdf" width="100%" height="100%">
-  <p>Alternative text - include a link <a href="BenGuilfoyleResume.pdf">to the PDF!</a></p>
+  <p>You seem to be viewing on mobile - you're going to need to <a href="BenGuilfoyleResume.pdf">download</a> the resume.</p>
 </object>
 </div>
 
