--- a/index.html
+++ b/index.html
@@ -138,12 +138,19 @@
 
 <div id="projects" class="tabcontent">
   <h1>Projects</h1>
-    <li>Below are some in browser compilers, click files,then the play button in the top right of each to view some of my projects at work!</li><br>
-    <li>All of my projects can be found on <a href = "https://github.com/BenGfoyle"> my github.</a> some of my favoirtes are below</li><br>
-    <li><a href = "https://github.com/BenGfoyle/Projectile-Motion">Projectile-Motion</a> is a python script to plot a 2D projectile in flight.</li><br>
-    <iframe frameborder="0" width="100%" height="600px" src="https://repl.it/@bengfoyle/Projectile-Motion?lite=true"></iframe>
-    <li><a href = "https://github.com/BenGfoyle/PythonEmail">EP305</a> is a collection of scripts designed as part of the module "Programming for Physicists"</li><br>
-    <iframe frameborder="0" width="100%" height="600px" src="https://repl.it/@bengfoyle/EP305?lite=true"></iframe>
+  <div class = "row">
+    <div class = "collum">
+      <li>Below are some in browser compilers, click files,then the play button in the top right of each to view some of my projects at work!</li><br>
+      <li><a href = "https://github.com/BenGfoyle/PythonEmail">EP305</a> is a collection of scripts designed as part of the module "Programming for Physicists"</li><br>
+      <li>All of my projects can be found on <a href = "https://github.com/BenGfoyle"> my github.</a> some of my favoirtes are below</li><br>
+      <li><a href = "https://github.com/BenGfoyle/Projectile-Motion">Projectile-Motion</a> is a python script to plot a 2D projectile in flight.</li><br>
+    </div>
+    
+    <div class = "collum>
+      <iframe frameborder="0" width="100%" height="600px" src="https://repl.it/@bengfoyle/Projectile-Motion?lite=true"></iframe>
+      <iframe frameborder="0" width="100%" height="600px" src="https://repl.it/@bengfoyle/EP305?lite=true"></iframe>
+    </div>
+  </div>
 </div>
 
 <div id="cv" class="tabcontent">
