--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <li><a href = "https://github.com/BenGfoyle/Projectile-Motion">Projectile-Motion</a> is a python script to plot a 2D projectile in flight.</li><br>
     </div>
 
-    <div class = "collum>
+    <div class = "collum">
       <iframe frameborder="0" width="100%" height="600px" src="https://repl.it/@bengfoyle/Projectile-Motion?lite=true"></iframe>
       <iframe frameborder="0" width="100%" height="600px" src="https://repl.it/@bengfoyle/EP305?lite=true"></iframe>
     </div>
