--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <div class="tab">
   <button class="tablinks" onclick="openSection(event, 'About')">Who am I?</button>
-  <button class="tablinks" onclick="openSection(event, 'Cons')">Contact</button>
+  <button class="tablinks" onclick="openSection(event, 'Cons')">TEST</button>
   <button class="tablinks" onclick="openSection(event, 'Refs')">References & Achknowledments</button>
 </div>
 
