Contatc info update

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <div class="tab">
   <button class="tablinks" onclick="openSection(event, 'About')">Who am I?</button>
-  <button class="tablinks" onclick="openSection(event, 'Cons')">TEST</button>
+  <button class="tablinks" onclick="openSection(event, 'Cons')">Contact</button>
   <button class="tablinks" onclick="openSection(event, 'Refs')">References & Achknowledments</button>
 </div>
 
@@ -99,7 +99,10 @@
 
 <div id="Cons" class="tabcontent">
   <h3>Contact Me Here:</h3>
-  <p>github.com/bengfoyle</p>
+  <li>Email: <a href = >bengfoyle@gmail.com<li>
+  <li><a href = https://github.com/BenGfoyle>Github</a></li>
+  <li><a href = https://www.linkedin.com/in/benjamin-guilfoyle-277130151/>LinkedIn</a></li>
+
 </div>
 
 <div id="About" class="tabcontent">
