--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <div id="Cons" class="tabcontent">
   <h3>Contact Me Here:</h3>
-  <li>Email: <a href = >bengfoyle@gmail.com<li>
+  <li>Email: <a href = >bengfoyle@gmail.com</li>
   <li><a href = https://github.com/BenGfoyle>Github</a></li>
   <li><a href = https://www.linkedin.com/in/benjamin-guilfoyle-277130151/>LinkedIn</a></li>
 
