--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
   <div class="tab">
     <button class="tablinks" onclick="openSection(event, 'basics')" id = "defaultOpen">About Me</button>
     <button class="tablinks" onclick="openSection(event, 'work')">Work Experience</button>
+    <button class="tablinks" onclick="openSection(event, 'graphs')">Graphs</button>
     <button class="tablinks" onclick="openSection(event, 'projects')">Projects</button>
     <button class="tablinks" onclick="openSection(event, 'cv')">Resume</button>
   </div>
@@ -123,6 +124,7 @@
     <li>Most my coding in the past year or so has been done in Python</li><br>
     <li>As part of my Physics degree I am working physical simuations in Python</li><br>
     <li>Some of these include my Projectile-Motion project.</li><br>
+    <li>I like graphs you can see some of those here too!.</li><br>
     <li>I have taken an interest in crytocurrency and dapp development</li><br>
     <li>I have designed my own cryptographic tokens on the Ethereum blockchain.</li><br>
     <li>You can find more detail about all the above throughout this page.</li><br>
@@ -148,6 +150,13 @@
       <li>All of my projects can be found on <a href = "https://github.com/BenGfoyle"> my github.</a> some of my favoirtes are below</li><br>
       <li><a href = "https://github.com/BenGfoyle/Projectile-Motion">Projectile-Motion</a> is a python script to plot a 2D projectile in flight.</li><br>
     </div>
+
+<div id="graphs" class="tabcontent">
+  <h1>Here are some neat graphs</h1>
+  <h2>Leaving Cert 2019 Points-Grades Network</h2>
+  <iframe frameborder="0" width="100%" height="600px" src = "https://bengfoyle.github.io/graphs/leavingCert2019/circularLeavingCertResults2019.html"></iframe>
+  <iframe frameborder="0" width="100%" height="600px" src = "https://bengfoyle.github.io/graphs/leavingCert2019/springLeavingCertResults2019.html"></iframe>
+</div>
 
     <div class = "collum">
       <iframe frameborder="0" width="100%" height="600px" src="https://repl.it/@bengfoyle/Projectile-Motion?lite=true"></iframe>
