--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 <div id="graphs" class="tabcontent">
   <h1>Here are some neat graphs</h1>
   <h2>Leaving Cert 2019 Points-Grades Network</h2>
-  <iframe frameborder="0" width="100%" height="600px" src = "https://bengfoyle.github.io/graphs/leavingCert2019/circularLeavingCertResults2019.html"></iframe>
-  <iframe frameborder="0" width="100%" height="600px" src = "https://bengfoyle.github.io/graphs/leavingCert2019/springLeavingCertResults2019.html"></iframe>
+  <a src = "https://bengfoyle.github.io/graphs/leavingCert2019/circularLeavingCertResults2019.html">Circular Graph of 2019 Leaving Certificate Results</a>
+  <a src = "https://bengfoyle.github.io/graphs/leavingCert2019/springLeavingCertResults2019.html">Spring Graph of 2019 Leaving Certificate Results</a>
 </div>
 
     <div class = "collum">
