--- a/index.html
+++ b/index.html
@@ -151,18 +151,18 @@
       <li><a href = "https://github.com/BenGfoyle/Projectile-Motion">Projectile-Motion</a> is a python script to plot a 2D projectile in flight.</li><br>
     </div>
 
-<div id="graphs" class="tabcontent">
-  <h1>Here are some neat graphs</h1>
-  <h2>Leaving Cert 2019 Points-Grades Network</h2>
-  <a src = "https://bengfoyle.github.io/graphs/leavingCert2019/circularLeavingCertResults2019.html">Circular Graph of 2019 Leaving Certificate Results</a>
-  <a src = "https://bengfoyle.github.io/graphs/leavingCert2019/springLeavingCertResults2019.html">Spring Graph of 2019 Leaving Certificate Results</a>
-</div>
-
     <div class = "collum">
       <iframe frameborder="0" width="100%" height="600px" src="https://repl.it/@bengfoyle/Projectile-Motion?lite=true"></iframe>
       <iframe frameborder="0" width="100%" height="600px" src="https://repl.it/@bengfoyle/EP305?lite=true"></iframe>
     </div>
   </div>
+</div>
+
+<div id="graphs" class="tabcontent">
+  <h1>Here are some neat graphs</h1>
+  <h2>Leaving Cert 2019 Points-Grades Network</h2>
+  <a frameborder="0" width="100%" height="600px" src = "https://bengfoyle.github.io/graphs/leavingCert2019/circularLeavingCertResults2019.html"></iframe>
+  <iframe frameborder="0" width="100%" height="600px" src = "https://bengfoyle.github.io/graphs/leavingCert2019/springLeavingCertResults2019.html"></iframe>
 </div>
 
 <div id="cv" class="tabcontent">
