--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       float: left;
       background-color: #92D5E6;
       width: 30%;
-      height: 100%;
+      height: 1080px;
     }
 
     /* Style the buttons inside the tab */
