--- a/thesis/index.html
+++ b/thesis/index.html
@@ -75,7 +75,7 @@
   <script src="http://www.skulpt.org/static/skulpt-stdlib.js" type="text/javascript"></script>
 
 <div class="tab">
-  <button class="tablinks" onclick="openSection(event, 'Thesis')">Thesis?</button>
+  <button class="tablinks" onclick="openSection(event, 'Thesis')">Thesis</button>
   <button class="tablinks" onclick="openSection(event, 'Links')">Links</button>
   <button class="tablinks" onclick="openSection(event, 'Links')">Images/Files</button>
   <button class="tablinks" onclick="openSection(event, 'Refs')">References & Achknowledments</button>
