--- a/thesis.html
+++ b/thesis.html
@@ -124,9 +124,7 @@
       <li>I also began work looking into the correct process in which to reduce my image using the bias, dark and flats. </li><br>
       <li>The corrected image can be expressed as; Raw - ((Dark + Bias)/Flat)</li><br>
       <li>I have been unable to produce a combined image yet. I am getting th efollowing error when I try concatenate the images together.
-TypeError: stat: path should be string, bytes, os.PathLike or integer, not method</li>
-      <li>My code is currently one test file as shown here.</li>
-      <img src = C:\Users\bguilfoyle\Documents\FYP\dailyUpdates\code10_21_2019.png></img>
+        TypeError: stat: path should be string, bytes, os.PathLike or integer, not method</li>
     </div>
 
     <div class = "collum">
@@ -135,7 +133,7 @@ TypeError: stat: path should be string, bytes, os.PathLike or integer, not metho
       <li>Using matplots alpha variable I am adjusting the transparency of the filter plots to allow for better viewing.</li><br>
       <li>I have added a simple GUI to allow me to adjust alpha.</li><br>
       <li>This will allow me to produce various graphs without the need to rerun/change my source code.</li><br>
-      <img src = C:\Users\bguilfoyle\Documents\FYP\dailyUpdates\code10_21_2019.png></img>
+      <img src = "plotWithAlphaFilters.png"></img>
     </div>
 
 </div>
