--- a/thesis.html
+++ b/thesis.html
@@ -133,7 +133,7 @@
       <li>Using matplots alpha variable I am adjusting the transparency of the filter plots to allow for better viewing.</li><br>
       <li>I have added a simple GUI to allow me to adjust alpha.</li><br>
       <li>This will allow me to produce various graphs without the need to rerun/change my source code.</li><br>
-      <img src = "plotWithAlphaFilters.png"></img>
+      <img src = "plotWithAlphaFilters.png", width =100px, height = 100px></img>
     </div>
 
 </div>
