Link to OHP Files

--- a/thesis.html
+++ b/thesis.html
@@ -77,7 +77,6 @@
 <div class="tab">
   <button class="tablinks" onclick="openSection(event, 'Thesis')">Thesis</button>
   <button class="tablinks" onclick="openSection(event, 'Links')">Links</button>
-  <button class="tablinks" onclick="openSection(event, 'Links')">Images/Files</button>
   <button class="tablinks" onclick="openSection(event, 'Refs')">References & Achknowledments</button>
 </div>
 
@@ -92,6 +91,7 @@
   <h3>Contact Me Here:</h3>
   <li>Email: bengfoyle@gmail.com</li>
   <li><a href = https://github.com/BenGfoyle>Github</a></li>
+  <li><a href = https://maynoothuniversity-my.sharepoint.com/:f:/g/personal/benjamin_guilfoyle_2017_mumail_ie/EtyH2iCWG8BEs8YcB162hj0B6rbxXAf0JNODiSio8QSo4w?e=RjwxEF>OHP Files</a></li>
   <li><a href = https://www.linkedin.com/in/benjamin-guilfoyle-277130151/>LinkedIn</a></li>
 
 </div>
