--- a/thesis.html
+++ b/thesis.html
@@ -85,6 +85,8 @@
 <div id="Refs" class="tabcontent">
   <h3>References & Achknowledments</h3>
   <p>Special thanks to the following.</p>
+  <li><a href = https://www.maynoothuniversity.ie/experimental-physics>The Maynooth University Department of Experimental Physics Staff</li><br>
+  <li><a href = http://www.obs-hp.fr/welcome.shtml>OHP Staff</li><br>
 </div>
 
 <div id="Links" class="tabcontent">
