--- a/thesis.html
+++ b/thesis.html
@@ -104,70 +104,8 @@
 </div>
 
 <div id="Thesis" class="tabcontent">
-
-  <div class="tab">
-    <button class="tablinks" onclick="openSection(event, 'October')" id = "defaultOpen">October</button>
-    <button class="tablinks" onclick="openSection(event, 'November')">November</button>
-    <button class="tablinks" onclick="openSection(event, 'December')">December</button>
-    <button class="tablinks" onclick="openSection(event, 'January')">January</button>
-    <button class="tablinks" onclick="openSection(event, 'February')">February</button>
-    <button class="tablinks" onclick="openSection(event, 'March')">March</button>
-    <button class="tablinks" onclick="openSection(event, 'April')">April</button>
-  </div>
-</div>
-
-<div id="October" class="tabcontent">
-  <h1>October</h1>
-  <div class = "row">
-    <div class = "collum">
-      <h2>Monday 21/10/2019</h2>
-      <li>Began work with astropy, a python library aimed at astrophysics and image processing.</li><br>
-      <li>Using this library I reproduces some of my FITS files. </li><br>
-      <li>I also began work looking into the correct process in which to reduce my image using the bias, dark and flats. </li><br>
-      <li>The corrected image can be expressed as; Raw - ((Dark + Bias)/Flat)</li><br>
-      <li>I have been unable to produce a combined image yet. I am getting th efollowing error when I try concatenate the images together.
-        TypeError: stat: path should be string, bytes, os.PathLike or integer, not method</li>
-    </div>
-
-    <div class = "collum">
-      <h2>Wednesday 23/10/2019</h2>
-      <li>Succesfully dispalyed both mixed, and individual images for each filter.</li><br>
-      <li>Using matplots alpha variable I am adjusting the transparency of the filter plots to allow for better viewing.</li><br>
-      <li>I have added a simple GUI to allow me to adjust alpha.</li><br>
-      <li>This will allow me to produce various graphs without the need to rerun/change my source code.</li><br>
-      <img src = "plotWithAlphaFilters.png", width =800px, height = 400px></img>
-    </div>
-
-</div>
-
-<div id="November" class="tabcontent">
-  <h1>November</h1>
-
-</div>
-
-<div id="December" class="tabcontent">
-  <h1>December</h1>
-
-</div>
-
-<div id="January" class="tabcontent">
-  <h1>January</h1>
-
-</div>
-
-<div id="February" class="tabcontent">
-  <h1>February</h1>
-
-</div>
-
-<div id="March" class="tabcontent">
-  <h1>March</h1>
-
-</div>
-
-<div id="April" class="tabcontent">
-  <h1>April</h1>
-
+	<object data="thesisUpdate.pdf" type="application/pdf" width="100%" height="100%">
+  <p>You seem to be viewing on mobile - you're going to need to <a href="thesisUpdate.pdf">download</a> the resume.</p>
 </div>
 
 <div id="projects" class="tabcontent">
